--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # ---- PYTHON -----
 # -----------------
 
+# Directories
+/analyses/data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
